@@ -1,5 +1,6 @@
 3.4.1 2024xxxx
 BF: DiskPart: Optimization of detach if an error occurs
+BF: DiskPart: Optimization of compact
 
 3.4.0 20240302
 BF: Review: Optimization and corrections
